--- a/tasks/setup-debian-vanilla.yml
+++ b/tasks/setup-debian-vanilla.yml
@@ -3,10 +3,9 @@
 # Copyright (C) 2019-2020 Ties de Kock
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-- name: (Debian) Add WireGuard repository on buster
+- name: (Debian) Add WireGuard repository
   apt_repository:
-    repo: "deb http://deb.debian.org/debian buster-backports main"
-    state: "{{ 'present' if (ansible_distribution_version | int <= 10) else 'absent' }}"
+    repo: "deb http://deb.debian.org/debian {{ ansible_facts.lsb.codename }}-backports main"
     update_cache: yes
 
 - name: (Debian) Install kernel headers for the currently running kernel to compile Wireguard with DKMS
